samples/_failures_safe/1761360776_941e74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a45d176.c: In function ‘print_errors’:
./samples/SAFE/__tmp_0a45d176.c:142:12: error: missing terminating " character
  142 |     printf("
      |            ^
./samples/SAFE/__tmp_0a45d176.c:142:5: error: expected expression at end of input
  142 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_0a45d176.c:142:5: error: expected declaration or statement at end of input
